# fore-game

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  fore-game.sln
fore-game/: fore-game.vcxproj  fore-game.vcxproj.filters  fore.cpp
src/: fore.cpp  pch.h
